[gd_scene load_steps=7 format=3 uid="uid://c606iw2diglu5"]

[ext_resource type="Script" path="res://Battler/battle_arena.gd" id="1_tny8i"]
[ext_resource type="PackedScene" uid="uid://6ljb5se6p8od" path="res://Battler/unit_spawner.tscn" id="2_dcgcf"]
[ext_resource type="Resource" uid="uid://brxtqikb26dxu" path="res://Levels/Level_1/level_1.tres" id="2_gju3j"]
[ext_resource type="PackedScene" uid="uid://kbcjw50h88gd" path="res://Battler/gray_box.tscn" id="3_u47qd"]
[ext_resource type="PackedScene" uid="uid://bm6q1lt7kiyfi" path="res://Battler/battler_unit.tscn" id="4_y7cmw"]

[sub_resource type="Environment" id="Environment_7prtp"]
background_mode = 1
background_color = Color(0.592157, 0, 0.443137, 1)

[node name="BattleArena" type="Node3D"]
script = ExtResource("1_tny8i")
selected_level = ExtResource("2_gju3j")

[node name="Blockout" type="Node3D" parent="."]

[node name="Road" parent="Blockout" instance=ExtResource("3_u47qd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00305805, 0.0025301, 0.00423193)
box_size = Vector3(20, 1, 30)
box_color = Color(0.403922, 0.403922, 0.403922, 1)
private_box_size = Vector3(20, 1, 30)
private_box_color = Color(0.403922, 0.403922, 0.403922, 1)

[node name="Wall" parent="Blockout" instance=ExtResource("3_u47qd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 5)
box_size = Vector3(20, 3, 1)
box_color = Color(0.403922, 0.403922, 0.403922, 1)
private_box_size = Vector3(20, 3, 1)
private_box_color = Color(0.403922, 0.403922, 0.403922, 1)

[node name="Wall2" parent="Blockout" instance=ExtResource("3_u47qd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -5.02521)
box_size = Vector3(20, 3, 1)
box_color = Color(0.403922, 0.403922, 0.403922, 1)
private_box_size = Vector3(20, 3, 1)
private_box_color = Color(0.403922, 0.403922, 0.403922, 1)

[node name="Box" parent="Blockout" instance=ExtResource("3_u47qd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0)
box_size = Vector3(1, 3, 10)
box_color = Color(0.403922, 0.403922, 0.403922, 1)
private_box_size = Vector3(1, 3, 10)
private_box_color = Color(0.403922, 0.403922, 0.403922, 1)

[node name="Box2" parent="Blockout" instance=ExtResource("3_u47qd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)
box_size = Vector3(1, 3, 10)
box_color = Color(0.403922, 0.403922, 0.403922, 1)
private_box_size = Vector3(1, 3, 10)
private_box_color = Color(0.403922, 0.403922, 0.403922, 1)

[node name="Camera" type="Camera3D" parent="Blockout"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0.642788, -0.766044, 0, 0.766044, 0.642788, 1, 2.80972e-08, -3.34849e-08, -15, 10, 0)
keep_aspect = 0
current = true

[node name="BattlerWorld" type="Node3D" parent="."]

[node name="DemonSpawner" parent="BattlerWorld" instance=ExtResource("2_dcgcf")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1.82138, 0)
unit_scene = ExtResource("4_y7cmw")

[node name="EnemySpawner" parent="BattlerWorld" instance=ExtResource("2_dcgcf")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 7, 1.82138, 0)
unit_scene = ExtResource("4_y7cmw")

[node name="BattlerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7prtp")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3239, 0)
light_energy = 16.0
omni_range = 10.353

[connection signal="unit_spawned" from="BattlerWorld/DemonSpawner" to="." method="_on_demon_unit_spawned"]
[connection signal="unit_spawned" from="BattlerWorld/EnemySpawner" to="." method="_on_enemy_unit_spawned"]
